Configured JPA with different data sources

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,17 @@
-spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.url=jdbc:mysql://localhost:3306/jpa?serverTimezone=America/Los_Angeles
-spring.datasource.username=mysqluser
-spring.datasource.password=mysqlpwd
-spring.jpa.show-sql=true
-spring.jpa.database=mysql
-spring.jpa.hibernate.ddl-auto=update
+# Data source 1
+spring.datasource.one.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.one.username=mysqluser
+spring.datasource.one.password=mysqlpwd
+spring.datasource.one.url=jdbc:mysql://localhost:3306/testdb01?serverTimezone=America/Los_Angeles
+
+# Data Source 2
+spring.datasource.two.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.two.username=mysqluser
+spring.datasource.two.password=mysqlpwd
+spring.datasource.two.url=jdbc:mysql://localhost:3306/testdb02?serverTimezone=America/Los_Angeles
+
+#
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57InnoDBDialect
+spring.jpa.properties.database=mysql
+spring.jpa.properties.hibernate.hbm2ddl.auto=update
+spring.jpa.properties.show-sql=true
