--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,6 @@
-# Data source 1
-spring.datasource.one.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.one.username=mysqluser
-spring.datasource.one.password=mysqlpwd
-spring.datasource.one.url=jdbc:mysql://localhost:3306/testdb01?serverTimezone=America/Los_Angeles
-
-# Data Source 2
-spring.datasource.two.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.two.username=mysqluser
-spring.datasource.two.password=mysqlpwd
-spring.datasource.two.url=jdbc:mysql://localhost:3306/testdb02?serverTimezone=America/Los_Angeles
-
-#
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57InnoDBDialect
-spring.jpa.properties.database=mysql
-spring.jpa.properties.hibernate.hbm2ddl.auto=update
-spring.jpa.properties.show-sql=true
+spring.data.mongodb.authentication-database=admin
+spring.data.mongodb.database=test
+spring.data.mongodb.host=127.0.0.1
+spring.data.mongo.port=27017
+spring.data.mongodb.username=mongouser
+spring.data.mongodb.password=mongopwd
