--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
-spring.data.mongodb.authentication-database=admin
-spring.data.mongodb.database=test
-spring.data.mongodb.host=127.0.0.1
-spring.data.mongo.port=27017
-spring.data.mongodb.username=mongouser
-spring.data.mongodb.password=mongopwd
+spring.redis.database=0
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
+spring.redis.password=123@456
+spring.redis.jedis.pool.max-active=8
+spring.redis.jedis.pool.max-idle=8
+spring.redis.jedis.pool.max-wait=-1ms
+spring.redis.jedis.pool.min-idle=0
